# rsomics-vcf-fixref

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  fasta.rs  gt.rs  lib.rs  nucleotide.rs  processor.rs  stats.rs  vcf.rs
tests/: compat.rs
tests/golden/: ref.fa  ref.fa.fai  small.vcf
