[package]
name = "rsomics-vcf-fixref"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-fixref"
authors = ["Zane Leong <efd@live.com>"]
description = "Check/fix VCF REF allele and strand against a reference FASTA — Rust port of bcftools +fixref"

[[bin]]
name = "rsomics-vcf-fixref"
path = "src/main.rs"


[lib]
name = "rsomics_vcf_fixref"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
